--- a/views/members.jade
+++ b/views/members.jade
@@ -15,7 +15,8 @@ html
 
 
     body
-        a(href='/'): img(src='/backbutton.jpg' class='backbutton')
+        a(href='/'): img(src='/backbutton.jpg' class='backbutton' style="margin-bottom: 30px;")
+        a(href='/review_feedback') Review Feedback
         ul(class="members-list")
             -each name in members
                 li: a(href='/members/'+name)= name
